--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -149,7 +149,16 @@ span {
 }
 
 .copyme {
-	display: none;
+	display: block;
+    width: 10px;
+    height: 10px;
+    color: rgba(255,255,255,0);
+    background-color: rgba(255,255,255,0);
+    border: none;
+    font-size: 6px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
 }
 
 .copybtn {
