--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,142 @@
-html {
-	
+/********* Bootstrap ********/
+.input-group {
+	position: relative;
+	display: table;
+	border-collapse: separate;
+	box-sizing: border-box;
 }
+.input-group-addon {
+    border-color: rgba(0, 0, 0, 0.6);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+    background-image: linear-gradient(#666, #333 50%, #333);
+    background-repeat: no-repeat;
+    filter: none;
+    color: #FFF;
+    box-sizing: border-box;
+}
+.input-group-addon {
+    padding: 8px 12px;
+    font-size: 14px;
+    font-weight: normal;
+    font: inherit;
+    line-height: 1;
+    border: 1px solid #CCC;
+    border-radius: 3px;
+	background: linear-gradient(to bottom, #666, #333 50%);
+    color: #FFF;
+    border: 1px solid #333;
+    box-sizing: border-box;
+    text-align: center;
+}
+.input-group-addon:first-child {
+    border-right: 0px none;
+}
+.input-group-addon:not(:first-child):not(:last-child), .input-group-btn:not(:first-child):not(:last-child), .input-group .form-control:not(:first-child):not(:last-child) {
+    border-radius: 0px;
+}
+.input-group .form-control:first-child, .input-group-addon:first-child, .input-group-btn:first-child > .btn, .input-group-btn:first-child > .btn-group > .btn, .input-group-btn:first-child > .dropdown-toggle, .input-group-btn:last-child > .btn:not(:last-child):not(.dropdown-toggle), .input-group-btn:last-child > .btn-group:not(:last-child) > .btn {
+    border-bottom-right-radius: 0px;
+    border-top-right-radius: 0px;
+}
+.input-group .form-control:last-child, .input-group-addon:last-child, .input-group-btn:last-child > .btn, .input-group-btn:last-child > .btn-group > .btn, .input-group-btn:last-child > .dropdown-toggle, .input-group-btn:first-child > .btn:not(:first-child), .input-group-btn:first-child > .btn-group:not(:first-child) > .btn {
+    border-bottom-left-radius: 0px;
+    border-top-left-radius: 0px;
+}
+.input-group-addon, .input-group-btn, .input-group .form-control {
+    display: table-cell;
+}
+.input-group-btn {
+    position: relative;
+    font-size: 0px;
+    white-space: nowrap;
+    font: inherit;
+}
+.input-group-btn > .btn {
+    position: relative;
+}
+.btn, .btn:hover {
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+}
+.btn-primary {
+    color: #FFF;
+	background-color: #718c00;
+    border-color: #677900;
+}
+.btn {
+    display: inline-block;
+    margin-bottom: 0px;
+    font-weight: normal;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 8px 12px;
+    font-size: 15px;
+    line-height: 1.42857;
+    border-radius: 4px;
+    -moz-user-select: none;
+}
+button, select {
+    text-transform: none;
+}
+button {
+    overflow: visible;
+    background-color: #718c00;
+	border-color: #677900;
+}
+
+.input-group-addon, .input-group-btn {
+    width: 1%;
+    white-space: nowrap;
+    vertical-align: middle;
+}
+.input-group-btn {
+    position: relative;
+    font-size: 0px;
+    white-space: nowrap;
+    line-height: 1.42857;
+	color: #C8C8C8;
+}
+.input-group-btn:last-child > .btn, .input-group-btn:last-child > .btn-group {
+    margin-left: 0px;
+}
+.input-group {
+    border-collapse: separate;
+}
+.input-group .form-control {
+    position: relative;
+    z-index: 2;
+    float: left;
+    width: 100%;
+    margin-bottom: 0px;
+    box-sizing: border-box;
+}
+.form-control {
+    display: block;
+    width: 100%;
+    height: 38px;
+    padding: 8px 0 8px 12px;
+    font-size: 14px;
+    line-height: 1.42857;
+    color: #272B30;
+    background-color: #FFF;
+    background-image: none;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset;
+    transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+    box-sizing: border-box;
+}
+button, input, optgroup, select, textarea {
+    color: inherit;
+    font: inherit;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+/******** REST Demo ********/
 body {
 	font: normal 0.9em/1.5em "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 }
@@ -8,6 +144,10 @@ code {
 	font-size: 1.2em;
 	border: 1px solid #CCC;
 	padding: 2px;
+	white-space: pre;
+}
+input:focus, textarea:focus {
+    outline: none;
 }
 #demo a {
 	color: #718c00;
@@ -27,63 +167,18 @@ span {
 .nowrap {
 	width: 95%;
 }
-.md_input_t1 {
-	box-sizing: border-box;
-	width: calc((100% - 380px)/2);
-	display: inline-block;
-	float: left;
-}
-.md_but_t2 {
-	padding: 7px 20px;
-	background-color: #718c00;
-	border-color: #677900;
-	box-sizing: border-box;
-	display: inline-block;
-}
-.md_but_t2:hover {
+button:hover {
 	background-color: #84a000;
 }
-.oj_static {
-	background: linear-gradient(to bottom, #666, #333 50%);
-	color: #FFF;
-	border: 1px solid #333;
-	display: block;
-	float: left;
-	padding: 5px 0;
-	box-sizing: border-box;
-	text-align: center;
-	height: 32px;
-}
-
 #restcontainer {
 	position: relative;
 }
-
 #filterhelp, #pathhelp {
-    position: relative;
-    z-index: 999;
-    left: -25px;
-    top: 0;
-    color: #7B7B7B;
-    cursor:pointer;
-    width: 0;
-}
-.question-circle {
-	background-color: #ccc;
-	border-radius: 50%;
-	width: 16px;
-	height: 14px;
-	padding: 2px 0 0 0;
-	font-size: 12px;
-	font-family: sans-serif;
-	font-style: normal;
-	display: inline-block;
-	text-align: center;
-	position: absolute;
-	top: 7px;
-	right: -16px;
-	cursor: pointer;
-	cursor: hand;
+    z-index: 3;
+    font-size: 15px;
+    background-color: #FFF;
+    border-radius: 0;
+    text-shadow: none;
 }
 .info {
 	background-color: #DDD;
@@ -101,10 +196,10 @@ span {
 
 .btn-fullscreen {
 	position: absolute;
+	display: block;
 	right: 0;
 	top: 0;
 	background-color: #FFF;
-	display: inline-block;
     cursor: pointer;
     color: #000;
     text-align: center;
@@ -112,8 +207,8 @@ span {
 	border-radius: 0 0 0 3px;
 	border: 1px solid #CCC;
 	background-color: #fff;
+	font: normal 11px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 }
-
 
 .responsetools {
 	width: 100%;
@@ -123,6 +218,12 @@ span {
 	font: normal 0.8em/1.5em 'Helvetica Neue', Arial, Helvetica, Geneva, sans-serif;
 	width: 100%;
 	margin: 0 0 10px 0;
+}
+
+.fullpath, .copyme {
+	padding: 5px 10px;
+	height: 29px;
+	width: 100%;
 }
 
 .httpstatus, .copybtn {
@@ -138,9 +239,8 @@ span {
 	float: left;
 }
 
-.fullpath {
+.patharea {
 	float: left;
-	padding: 5px 10px;
 	height: 29px;
 	box-sizing: border-box;
 	background-color: #eee;
@@ -149,16 +249,10 @@ span {
 }
 
 .copyme {
-	display: block;
-    width: 10px;
-    height: 10px;
-    color: rgba(255,255,255,0);
-    background-color: rgba(255,255,255,0);
+    color: #000;
+    background-color: #ccc;
     border: none;
-    font-size: 6px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    font-size: 11px;
 }
 
 .copybtn {
@@ -173,10 +267,76 @@ span {
 	background-color: #ccc;
 }
 
-.left {
-	float: left;
+.glyphicon:hover {
+	color: #718c00;
 }
 
-.inputholder {
+/*********** Flippin magic ***********/
+#container {
+	-webkit-perspective: 1000;
+	-moz-perspective: 1000;
+	-o-perspective: 1000;
+	perspective: 1000;
+	-ms-transform-style: preserve-3d;
+
+}
+
+#container.hover #flipper {
+  -webkit-transform: rotateX(180deg);
+  -ms-transform: rotateX(180deg);
+  -o-transform: rotateX(180deg);
+  transform: rotateX(180deg);
+}
+#container, .front, .back {
+	width: 100%;
+	height: 29px;
+}
+
+#container.hover .back {
+	-ms-transform: rotateX(0deg);
+}
+#container.hover .front {
+	-ms-transform: rotateX(180deg);
+}
+
+#flipper {
+	-webkit-transform-style: preserve-3d;
+	-webkit-transition: all 0.3s linear;
+	-moz-transform-style: preserve-3d;
+	-moz-transition: all 0.3s linear;
+	-o-transform-style: preserve-3d;
+	-o-transition: all 0.3s linear;
+	transform-style: preserve-3d;
+	transition: all 0.3s linear;
+	-webkit-transform-origin: 100% 14.5px;
+	-ms-transform-origin: 100% 14.5px;
+	-o-transform-origin: 100% 14.5px;
+	transform-origin: 100% 14.5px;
 	position: relative;
+	
+}
+.front, .back {
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	-ms-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-ms-transition: 0.6s;
+	-ms-transform-style: preserve-3d;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.front {
+	z-index: 2;
+	-webkit-transform: rotateX(0deg);
+	-moz-transform: rotateX(0deg);
+	-o-transform: rotateX(0deg);
+	transform: rotateX(0deg);
+}
+.back {
+  	-webkit-transform: rotateX(180deg);
+	-moz-transform: rotateX(180deg);
+	-o-transform: rotateX(180deg);
+	transform: rotateX(180deg);
 }
