--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -292,12 +292,14 @@ button:hover {
 	height: 29px;
 }
 
+/*
 #container.hover .back {
 	-ms-transform: rotateX(0deg);
 }
 #container.hover .front {
 	-ms-transform: rotateX(180deg);
 }
+*/
 
 #flipper {
 	-webkit-transform-style: preserve-3d;
@@ -331,12 +333,14 @@ button:hover {
 	z-index: 2;
 	-webkit-transform: rotateX(0deg);
 	-moz-transform: rotateX(0deg);
+	-ms-transform: rotateX(0deg);
 	-o-transform: rotateX(0deg);
 	transform: rotateX(0deg);
 }
 .back {
   	-webkit-transform: rotateX(180deg);
 	-moz-transform: rotateX(180deg);
+	-ms-transform: rotateX(180deg);
 	-o-transform: rotateX(180deg);
 	transform: rotateX(180deg);
 }
