--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -272,6 +272,7 @@ button:hover {
 }
 
 /*********** Flippin magic ***********/
+/*
 #container {
 	-webkit-perspective: 1000;
 	-moz-perspective: 1000;
@@ -293,7 +294,7 @@ button:hover {
 }
 
 #container.hover .back {
-	-ms-transform: rotateX(0deg);
+	-ms-transform: rotateX(360deg);
 }
 #container.hover .front {
 	-ms-transform: rotateX(180deg);
@@ -340,3 +341,160 @@ button:hover {
 	-o-transform: rotateX(180deg);
 	transform: rotateX(180deg);
 }
+*/
+/******** New flippin magic FUCK YOU IE *********/
+.card {
+	perspective: 1000px;
+	-webkit-perspective: 1000px;
+	-moz-perspective: 1000px;
+	-o-perspective: 1000px;
+	-ms-perspective: 1000px;
+	margin:80px 150px;
+	width:320px;
+	height:243px;
+	vertical-align:top;
+	position:absolute;
+	display:block;
+	font-size:25px;
+    font-weight:bold;
+}
+
+.card .content {
+	transition: 0.5s ease-out;
+	-webkit-transition: 0.5s ease-out;
+	-moz-transition: 0.5s ease-out;
+	-o-transition: 0.5s ease-out;
+	-ms-transition: 0.5s ease-out;
+	transform-style: preserve-3d;
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	-o-transform-style: preserve-3d;
+	-ms-transform-style: preserve-3d;
+
+	/* content backface is visible so that static content still appears */
+	backface-visibility: visible;
+	-webkit-backface-visibility: visible;
+	-moz-backface-visibility: visible;
+	-o-backface-visibility: visible;
+	-ms-backface-visibility: visible;
+
+
+	border: 1px solid grey;
+    border-radius: 15px;
+	position:relative;
+	width: 100%;
+	height: 100%;
+	
+}
+.card.applyflip .content {
+	transform: rotateX(180deg);
+	-webkit-transform: rotateX(180deg);
+	-moz-transform: rotateX(180deg);
+	-o-transform: rotateX(180deg);
+	-ms-transform: rotateX(180deg);
+}
+
+
+.card .content .cardStatic {
+	/* Half way through the card flip, rotate static content to 0 degrees */
+	transition: 0s linear 0.17s;
+	-webkit-transition: 0s linear 0.17s;
+	-moz-transition: 0s linear 0.17s;
+	-o-transition: 0s linear 0.17s;
+	-ms-transition: 0s linear 0.17s;
+	transform: rotateX(0deg);
+	-webkit-transform: rotateX(0deg);
+	-moz-transform: rotateX(0deg);
+	-o-transform: rotateX(0deg);
+	-ms-transform: rotateX(0deg);
+
+	text-align: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 0;
+	width: 100%;
+	line-height:100px;
+}
+
+.card.applyflip .content .cardStatic {
+	/* Half way through the card flip, rotate static content to -180 degrees -- to negate the flip and unmirror the static content */
+	transition: 0s linear 0.17s;
+	-webkit-transition: 0s linear 0.17s;
+	-moz-transition: 0s linear 0.17s;
+	-o-transition: 0s linear 0.17s;
+	-ms-transition: 0s linear 0.17s;
+	transform: rotateX(-180deg);
+	-webkit-transform: rotateX(-180deg);
+	-moz-transform: rotateX(-180deg);
+	-o-transform: rotateX(-180deg);
+	-ms-transform: rotateX(-180deg);
+}
+
+.card .content .cardFront {
+    background-color: skyblue;
+    color: tomato;
+}
+
+.card .content .cardBack {
+    background-color: tomato;
+    color: skyblue;
+}
+
+.card .content .cardFront, .card .content .cardBack {
+	/* Backface visibility works great for all but IE. As such, we mark the backface visible in IE and manage visibility ourselves */
+	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	-o-backface-visibility: hidden;
+	-ms-backface-visibility: visible;
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	text-align: center;
+	line-height:200px;
+    border-radius: 14px;
+}
+.card .content .cardFront, .card.applyflip .content .cardFront {
+	transform: rotateX(0deg);
+	-webkit-transform: rotateX(0deg);
+	-moz-transform: rotateX(0deg);
+	-o-transform: rotateX(0deg);
+	-ms-transform: rotateX(0deg);
+}
+
+.card .content .cardBack, .card.applyflip .content .cardBack {
+	transform: rotateX(-180deg);
+	-webkit-transform: rotateX(-180deg);
+	-moz-transform: rotateX(-180deg);
+	-o-transform: rotateX(-180deg);
+	-ms-transform: rotateX(-180deg);
+}
+
+.card .content .cardFront, .card.applyflip .content .cardBack {
+	/* IE Hack. Halfway through the card flip, set visibility. Keep other browsers visible throughout the card flip. */
+	animation: stayvisible 0.5s both;
+	-webkit-animation: stayvisible 0.5s both;
+	-moz-animation: stayvisible 0.5s both;
+	-o-animation: stayvisible 0.5s both;
+	-ms-animation: donothing 0.5s;
+	-ms-transition: visibility 0s linear 0.17s;
+	visibility: visible;
+}
+.card.applyflip .content .cardFront, .card .content .cardBack {
+	/* IE Hack. Halfway through the card flip, set visibility. Keep other browsers visible throughout the card flip. */
+	animation: stayvisible 0.5s both;
+	-webkit-animation: stayvisible 0.5s both;
+	-moz-animation: stayvisible 0.5s both;
+	-o-animation: stayvisible 0.5s both;
+	-ms-animation: donothing 0.5s;
+	-ms-transition: visibility 0s linear 0.17s;
+	visibility: hidden;
+}
+@keyframes stayvisible { from { visibility: visible; } to { visibility: visible; } }
+@-webkit-keyframes stayvisible { from { visibility: visible; } to { visibility: visible; } }
+@-moz-keyframes stayvisible { from { visibility: visible; } to { visibility: visible; } }
+@-o-keyframes stayvisible { from { visibility: visible; } to { visibility: visible; } }
+@-ms-keyframes donothing { 0% { } 100% { } }
