--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -349,11 +349,11 @@ button:hover {
 	-moz-perspective: 1000px;
 	-o-perspective: 1000px;
 	-ms-perspective: 1000px;
-	margin:80px 150px;
+	margin:0;
 	width:100%;
 	height:29px;
-	vertical-align:top;
-	position:absolute;
+	
+	
 	display:block;
 }
 
@@ -375,10 +375,6 @@ button:hover {
 	-moz-backface-visibility: visible;
 	-o-backface-visibility: visible;
 	-ms-backface-visibility: visible;
-
-
-	border: 1px solid grey;
-    border-radius: 15px;
 	position:relative;
 	width: 100%;
 	height: 100%;
