--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -180,6 +180,12 @@ button:hover {
     border-radius: 0;
     text-shadow: none;
 }
+/* MS placeholder only style */   
+input#filterhelp:-ms-input-placeholder, input#pathhelp:-ms-input-placeholder {
+    font-style:bold;        
+    color: #CCC;
+  }
+
 .info {
 	background-color: #DDD;
 	padding: 5px 7px;
@@ -271,78 +277,7 @@ button:hover {
 	color: #718c00;
 }
 
-/*********** Flippin magic ***********/
-/*
-#container {
-	-webkit-perspective: 1000;
-	-moz-perspective: 1000;
-	-o-perspective: 1000;
-	perspective: 1000;
-	-ms-transform-style: preserve-3d;
-
-}
-
-#container.hover #flipper {
-  -webkit-transform: rotateX(180deg);
-  -ms-transform: rotateX(180deg);
-  -o-transform: rotateX(180deg);
-  transform: rotateX(180deg);
-}
-#container, .front, .back {
-	width: 100%;
-	height: 29px;
-}
-
-#container.hover .back {
-	-ms-transform: rotateX(360deg);
-}
-#container.hover .front {
-	-ms-transform: rotateX(180deg);
-}
-
-#flipper {
-	-webkit-transform-style: preserve-3d;
-	-webkit-transition: all 0.3s linear;
-	-moz-transform-style: preserve-3d;
-	-moz-transition: all 0.3s linear;
-	-o-transform-style: preserve-3d;
-	-o-transition: all 0.3s linear;
-	transform-style: preserve-3d;
-	transition: all 0.3s linear;
-	-webkit-transform-origin: 100% 14.5px;
-	-ms-transform-origin: 100% 14.5px;
-	-o-transform-origin: 100% 14.5px;
-	transform-origin: 100% 14.5px;
-	position: relative;
-	
-}
-.front, .back {
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	-ms-backface-visibility: hidden;
-	backface-visibility: hidden;
-	-ms-transition: 0.6s;
-	-ms-transform-style: preserve-3d;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-.front {
-	z-index: 2;
-	-webkit-transform: rotateX(0deg);
-	-moz-transform: rotateX(0deg);
-	-o-transform: rotateX(0deg);
-	transform: rotateX(0deg);
-}
-.back {
-  	-webkit-transform: rotateX(180deg);
-	-moz-transform: rotateX(180deg);
-	-o-transform: rotateX(180deg);
-	transform: rotateX(180deg);
-}
-*/
-/******** New flippin magic FUCK YOU IE *********/
+/******** Flippin magic *********/
 .card {
 	perspective: 1000px;
 	-webkit-perspective: 1000px;
